--- a/app/src/main/res/layout/fragment_chatlist.xml
+++ b/app/src/main/res/layout/fragment_chatlist.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="채팅방 리스트"
+            android:text="@string/chat_room_list"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
