--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="gray_c">#ececec</color>
     <color name="orange">#f27f35</color>
 
+    <color name="black_24">#3D000000</color>
+
 </resources>
